# eduagent

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
scripts/: generate_readme.py
src/: __init__.py
src/agent/: __init__.py  agent.py  prompt.py
src/tools/: base.py  mistakes_search.py  mistakes_store.py  user_name.py
src/utils/: __init__.py  transcript.py
